--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>kidedu 儿童教育网</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<div class="footer"></div>
+<div class="edu">
+    <h3>儿童教育</h3>
+    <li><a href="blogs/0.html" target="_blank">让儿童拥有选择的权利，并学会选择。</a></li>
+</div>
+<div class="toys">
+    <h3>儿童玩具</h3>
+
+</div>
+<div class="art">
+    <h3>儿童艺术</h3>
+    <li><a href="artclass/0.html" target="_blank">如何教小朋友画画</a></li>
+</div>
+<div class="books">
+    <h3>儿童读物</h3>
+</div>
+
+<div class="music">
+    <h3>儿歌</h3>
+    伊比啦啦
+</div>
+<div class="footer">
     <div class="links">
         <h3>友情链接</h3>
         <li><a href="http://www.silushen.com" target="_blank">司禄神</a></li>
@@ -14,6 +36,7 @@
         <li><a href="http://www.kulielie.com" target="_blank">哭咧咧</a></li>
         <li><a href="http://www.xiaoniaodushu.com" target="_blank">小鸟读书</a></li>
     </div>
+    原创作品，开放版权，欢迎转载。2015 儿童教育网
 </div>
 </body>
 </html>
