--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+<div class="banner">
+    <div class="logo"></div>
+    <h2>儿童教育网</h2>
+</div>
 <div class="edu">
     <h3>儿童教育</h3>
     <li><a href="blogs/0.html" target="_blank">让儿童拥有选择的权利，并学会选择。</a></li>
+    <li><a href="blogs/1.html" target="_blank">过敏性鼻炎，过敏性结膜炎，常被家长忽略但却必须知道的5件事儿。</a></li>
+    <li><a href="blogs/2.html" target="_blank">屋子不干净给宝宝带来的9种危害</a></li>
 </div>
 <div class="toys">
     <h3>儿童玩具</h3>
@@ -18,6 +24,8 @@
 <div class="art">
     <h3>儿童艺术</h3>
     <li><a href="artclass/0.html" target="_blank">如何教小朋友画画</a></li>
+    <li><a href="artclass/1.html" target="_blank">3步画一只小鸟</a></li>
+    <li><a href="artclass/2.html" target="_blank">3步画一只小螃蟹</a></li>
 </div>
 <div class="books">
     <h3>儿童读物</h3>
@@ -35,6 +43,9 @@
         <li><a href="http://www.kunchongzhi.com" target="_blank">昆虫志</a></li>
         <li><a href="http://www.kulielie.com" target="_blank">哭咧咧</a></li>
         <li><a href="http://www.xiaoniaodushu.com" target="_blank">小鸟读书</a></li>
+    </div>
+    <div class="about">
+        <li><a href="aboutus.html" target="_blank">关于我们</a></li>
     </div>
     原创作品，开放版权，欢迎转载。2015 儿童教育网
 </div>
