--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
     <h3>儿歌</h3>
     伊比啦啦
 </div>
+
+<div class="xx">
+    <h3>以身作则</h3>
+    <li><a href="xx/0.html" target="_blank">没用的东西要丢掉，给孩子一个干净的家。</a></li>
+</div>
+
+<div class="photoclass">
+    <h3>拍摄讲堂</h3>
+    <li><a href="photoclass/0.html" target="_blank">千万别用闪光灯！</a></li>
+    <li><a href="photoclass/1.html" target="_blank">8种技巧，拍摄出明星一样的宝宝！</a></li>
+</div>
 <div class="footer">
     <div class="links">
         <h3>友情链接</h3>
