--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <li><a href="http://www.kunchongzhi.com" target="_blank">昆虫志</a></li>
         <li><a href="http://www.kulielie.com" target="_blank">哭咧咧</a></li>
         <li><a href="http://www.xiaoniaodushu.com" target="_blank">小鸟读书</a></li>
+        <li><a href="http://www.booklist.cc" target="_blank">书单</a></li>
     </div>
     <div class="about">
         <li><a href="aboutus.html" target="_blank">关于我们</a></li>
